# leave_management

backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/data/: holidays.json  leave_balances.json  leave_policies.json  leave_requests.json  users.json
backend/src/: main.rs  models.rs  state.rs
backend/src/handlers/: auth.rs  leaves.rs  mod.rs  users.rs
backend/src/middleware/: auth.rs
leave-management-frontend/: README.md  angular.json  package-lock.json  package.json
leave-management-frontend/src/: index.html  styles.scss
leave-management-frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
leave-management-frontend/src/app/core/constants/: app.constants.ts
leave-management-frontend/src/app/core/guards/: auth.guard.ts  role.guard.ts
leave-management-frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts
leave-management-frontend/src/app/core/models/: api-response.model.ts  index.ts  leave.model.ts  user.model.ts
leave-management-frontend/src/app/core/services/: auth.service.ts  index.ts  leave.service.ts  mock-data.service.ts  notification.service.ts  theme.service.ts  user.service.ts
leave-management-frontend/src/app/features/dashboard/: dashboard.component.ts
leave-management-frontend/src/app/features/profile/: profile.component.ts
leave-management-frontend/src/app/layouts/auth-layout/: auth-layout.component.ts
leave-management-frontend/src/app/layouts/main-layout/: main-layout.component.ts
leave-management-frontend/src/environments/: environment.prod.ts  environment.ts
(+15 files in other folders)
